# ChiechMaster

./: .coveragerc  .env.example  .gitignore  dev.db  pyproject.toml
alembic/: env.py
alembic/versions/: 9e627228c861_init.py  b8b6a26fa480_models.py  b9d14461cf7b_fixes_in_user_goals_tasks_big_goals.py  f87fc22ba020_fixes.py
app/: config.py
app/api/: main.py
app/api/routers/: user.py
app/core/db/: session.py
app/core/db/models/: __init__.py  association_tables.py  chiech_daily.py  chiech_database.py  chiech_master.py  enums.py  models.py  user.py
app/core/services/: league_db_services.py  user.py  user_db_services.py
app/ui_bot/: main.py
app/ui_bot/handlers/: league.py  start.py
app/ui_bot/messages/: league.py
app/ui_bot/utils/: progress_bars.py
tests/: conftest.py  test_db_user.py
