[project]
name = "chiechmaster"
version = "0.1.0"
description = ""
authors = [
    {name = "Babuuum",email = "darckiller@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi[standart] (>=0.124.0,<0.125.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "fastapi[standart] (>=0.124.0,<0.125.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pytest (>=8.3.0,<9.0.0)",
    "pytest-asyncio (>=0.23.8,<0.24.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "coverage (>=7.13.0,<8.0.0)",
    "aiogram (>=3.23.0,<4.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
